--- a/index.html
+++ b/index.html
@@ -1,43 +1,20 @@
 <html>
     <body>
-        <head>
-            <link rel="stylesheet" href="style.css"/>
-        </head>
         <header>
-            <a href="#price">Прайс-лист</a> <a href="#reviews">Отзывы</a> <a href="#photos">Фотографии</a>
+            <img class="icons" src="/uploads/2020/12/painter-161318_1280_0_1606929818.png"/>
+            <img src="/uploads/2020/12/watercolour-4116355_1280%201_0_1606929771.png">
         </header>
         <main>
-            <h1>Phone Repair<br/><img src="https://learn.algoritmika.org/uploads/2020/11/soldering-5117508_1280_0_1605278553.png" width="200px"/> <img src="https://learn.algoritmika.org/uploads/2020/11/tool-145376_1280_0_1605278554.png" width="200px"/> <img src="https://learn.algoritmika.org/uploads/2020/11/guy-1424911_1280_0_1605278554.png" width="200px" height="190px"/></h1>
-            <h2 id="price">Услуги и цены</h2>
-            <table>
-                <tr>
-                    <td>Название услуги</td>
-                    <td>Цена</td>
-                    <td>Срок выполнения</td>
-                </tr>
-                <tr>
-                    <td>Замена разъема <br/>зарядки</td>
-                    <td>750 руб.</td>
-                    <td>1 день</td>
-                </tr>
-                <tr>
-                    <td>Замена экрана</td>
-                    <td>от 1500 руб.</td>
-                    <td>от 2-х дней</td>
-                </tr>
-                <tr>
-                    <td>Перепрошивка</td>
-                    <td>от 1000 руб.</td>
-                    <td>1 день</td>
-                </tr>
-            </table>
-            <h2 id="reviews">Отзывы</h2>
-            <p><i>Наталья: </i>Сломался разъём для зарядки в новом iPhone. Починили оперативно. Была в офисе на Ремонтной улице.</p>
-            <p><i>Максим: </i>Нужно было срочно спасать телефон от вирусов. Думал всё — потеряю и данные и телефон. Спасибо ребятам на проспекте Прогресса — данные вытащили, телефон восстановили.</p>
-            <p><i>Юля: </i>Разбила экран планшета и сразу побежала в мастерскую на Ремонтной улице. Правда экрана для моей модели не оказалось в наличии, но ребята сделали заказ и телефон получила через три дня.</p>
-            <h2 id="photos">Фотографии</h2>
-            <img src="https://learn.algoritmika.org/uploads/2020/11/broken-3653897_1920_0_1605280313.jpg" height="250px"/> <img src="https://learn.algoritmika.org/uploads/2020/11/mobile-phone-2510529_1920_0_1605280314.jpg" height="250px"/><br/>
-            <img src="https://learn.algoritmika.org/uploads/2020/11/mobile-phone-4381895_1920_0_1605280472.jpg" width="790px"/>
+            <h1>Design 24/7 <img class="icons" src="/uploads/2020/12/smiley-559124_1280_0_1606930190.png"/></h1>
+            <p>Дизайнер, рисую для сайтов:<br/>
+                <img class="marker" src="/uploads/2020/12/Group%201%20(1)_0_1606931792.png"/>логотипы;<br/>
+                <img class="marker" src="/uploads/2020/12/Group%201%20(1)_0_1606931792.png"/>иконки;<br/>
+                <img class="marker" src="/uploads/2020/12/Group%201%20(1)_0_1606931792.png"/>коллажи.<br/>
+            <img src="/uploads/2020/12/splatter-303249_1280%201_0_1606930441.png"/></p>
         </main>
+        <footer>
+            <a href=""><img class="icons" src="/uploads/2020/12/instagram-3288419_1280%201_0_1606932144.png"/></a>
+            <a href=""><img class="icons" src="/uploads/2020/12/Whats%20App_0_1606932493.png"/></a>
+        </footer>
     </body>
 </html>
